kustomize/environments/development/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promo-postmortem-streamlit
spec:
  replicas: 1
