kustomize/environments/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promo-postmortem-streamlit
spec:
  tls:
    - hosts:
        - ${DEV_HOST}
      secretName: ${DEV_TLS_SECRET}
  rules:
    - host: ${DEV_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: promo-postmortem-streamlit
                port:
                  number: 80
